--- a/.github/workflows/sync-from-osc.yml
+++ b/.github/workflows/sync-from-osc.yml
@@ -2,8 +2,8 @@ name: Sync from OSC
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 3 * * *"
+#   schedule:
+#     - cron: "0 3 * * *"
   push:
     branches: [ main ]
 
