--- a/.github/workflows/sync-from-osc.yml
+++ b/.github/workflows/sync-from-osc.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -33,7 +36,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add catalog
-          git commit -m "Sync proprietary projects from source" || echo "No changes"
+          git commit -m "Sync proprietary projects from OSC" || echo "No changes"
 
       - name: Push changes
         run: git push
